# context-biasing-dic

./: .gitignore  Cargo.toml  DESIGN.md  HANDOVER.md  README.ja.md  README.md  SPEC.ja.md  SPEC.md  biasing-dict-diff-utility-design.md  harvest-implementation-plan.md  install.sh
app/: index.html  package-lock.json  package.json
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/assets/fonts/: GeistMono-OFL.txt  README.md
scripts/: nightly-harvest.sh  qwen3_asr_batch.py
src/: asr_qwen3_mlx.rs  cli.rs  collect.rs  diff.rs  evaluate.rs  extract.rs  ffmpeg.rs  harvest.rs  lib.rs  main.rs  messages.rs  morph.rs  pipeline.rs  reading.rs  recognize.rs  source.rs  source_file.rs  source_qiita.rs  source_zenn.rs  synth.rs  synth_say.rs  synth_voicevox.rs  token.rs  vote.rs
tests/: harvest_integration.rs  pipeline_test.rs
